🐛 FIX: Don't coerce untyped property values to NULL in event listeners
Resolves OOE-25.